[gd_scene load_steps=13 format=2]

[ext_resource path="res://sources/quiz/level/levelGame.gd" type="Script" id=1]
[ext_resource path="res://resources/questions/db/dbQuizGame.tres" type="Resource" id=2]
[ext_resource path="res://resources/questions/imgs/placa.png" type="Texture" id=3]
[ext_resource path="res://resources/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_color = Color( 0.843137, 0.376471, 0.00392157, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=7]
size = 40
outline_color = Color( 0.843137, 0.376471, 0.00392157, 1 )
font_data = ExtResource( 4 )

[node name="LevelGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
dbQuiz = ExtResource( 2 )
colorRight = Color( 0.270588, 0.796078, 0.054902, 1 )
colorWrong = Color( 0.788235, 0.101961, 0.101961, 1 )

[node name="PlacaBackground" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
texture = ExtResource( 3 )
expand = true

[node name="QuestionInfo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -359.5
margin_top = 45.0
margin_right = 359.5
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TxtQuestion" type="Label" parent="QuestionInfo"]
margin_top = 211.0
margin_right = 719.0
margin_bottom = 281.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
align = 1

[node name="ImageHolder" type="Panel" parent="QuestionInfo"]
visible = false
margin_top = 192.0
margin_right = 719.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 300 )

[node name="questionImg" type="TextureRect" parent="QuestionInfo/ImageHolder"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionHolder" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -343.0
margin_top = -699.0
margin_right = 344.0
margin_bottom = -26.0
custom_constants/separation = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOpt1" type="Button" parent="QuestionHolder"]
margin_right = 687.0
margin_bottom = 205.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.843137, 0.376471, 0.00392157, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "TESTO INFO"

[node name="ButtonOpt2" type="Button" parent="QuestionHolder"]
margin_top = 233.0
margin_right = 687.0
margin_bottom = 439.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.843137, 0.376471, 0.00392157, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="ButtonOpt3" type="Button" parent="QuestionHolder"]
margin_top = 467.0
margin_right = 687.0
margin_bottom = 673.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.843137, 0.376471, 0.00392157, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
